rancher-wordpress/templates/matriadb_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: "${release-name}"
    app.kubernetes.io/name: mariadb
  name: "${release-name}-mariadb"
  namespace: "${namespace}"
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
          protocol: TCP
        - port: 3306
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release-name}"
      app.kubernetes.io/name: mariadb
  policyTypes:
    - Ingress
    - Egress
