rancher-wordpress/templates/wordpress_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: "${release-name}"
    app.kubernetes.io/name: wordpress
  name: "${release-name}-wordpress"
  namespace: "${namespace}"
spec:
  egress:
    - {}
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080
          protocol: TCP
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release-name}"
      app.kubernetes.io/name: wordpress
  policyTypes:
    - Ingress
    - Egress
